<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">自主二合一测试</string>
    <string name="hello_world">Hello world!</string>
    <string name="mode_select">请选择读卡器类型</string>
    <string name="card_select">请选择读卡类型</string>
    <string name="mode_serial">身份证</string>
    <string name="mainmode_serial">串口读卡器</string>
    <string name="mainmode_usb">USB读卡器</string>
    <string name="mainmode_bt">蓝牙读卡器</string>
    <string name="mode_usb">身份证</string>
    <string name="tmode_usb">Type A 卡</string>
    <string name="tmode_serial">Type A 卡</string>
    
    <string name="idcard_czz">操作中</string>
    <string name="idcard_ljdkq">连接读卡器...</string>
    <string name="idcard_ljdkqcg">连接读卡器成功</string>
    <string name="idcard_wfljdkq">无法连接读卡器</string>
    <string name="idcard_sbljcg">设备连接成功</string>
    <string name="tacard_TAyz">Type A卡阅读器</string>
    
    <string name="tacard_myrz">如需进行卡数据读写，请验证密钥</string>
    <string name="tacard_qsrmy">请输入密钥</string>
    <string name="tacard_mybnwk">密钥 不能为空</string>
    <string name="tacard_myyzcg">密钥验证成功,卡内数据已读取</string>
    <string name="tacard_zzdqknsj">密钥验证成功,正在读取卡内数据</string>
    <string name="tacard_knsjydq">卡内数据已读取</string>
    <string name="tacard_dqknsjsb">读取卡内数据失败</string>
    <string name="tacard_mycw">密钥错误，请重新输入密码</string>
    <string name="tacard_knsj">卡内数据：</string>
    <string name="tacard_qxrsj">请写入数据</string>
    <string name="tacard_xrsjcg">写入数据成功</string>
    <string name="tacard_xrsjsb">写入数据失败，请重新输入</string>
    <string name="tacard_xrsjbnwk">写入数据不能为空,请重新输入</string>    
    <string name="idcard_dqsbhcs">未读取到身份证</string>
    <string name="idcard_hqqxsb">获取权限失败</string>
    <string name="idcard_hqqxcg">获取权限成功</string>
    <string name="idcard_kh">卡号：</string>
    <string name="idcard_xm">姓名：</string>
    <string name="idcard_xb">性别：</string>
    <string name="idcard_mz">民族：</string>
    <string name="idcard_csrq">出生日期：</string>
    <string name="idcard_dz">地址：</string>
    <string name="idcard_sfhm">身份号码：</string>
    <string name="idcard_qzjg">签发机关：</string>
    <string name="idcard_yxqx">"有效期限："</string>
    <string name="idcard_hqsfzxx">获取身份证信息</string>
    <string name="idcard_dkts">请将身份证放到读卡器读卡区域......</string>
    <string name="idcard_zbdsfsbmk">找不到识别模块</string>
    <string name="idcard_wazsfsbmk">未安装身份证识别模块，是否安装？</string>
    <string name="idcard_azsb">安装失败</string>
    <string name="idcard_xzgn">选择功能</string>
    <string name="idcard_xzsfsbfs">请选择身份证识别方式</string>
    <string name="idcard_sxtsb">摄像头OCR识别</string>
    <string name="idcard_dkqsb">"二代证读卡器识别"</string>
    <string name="idcard_usbdkq">"USB读卡器"</string>
    <string name="idcard_ckdkq">"串口读卡器"</string>
    <string name="get_id_front_fail">获取身份证正面信息失败</string>
    <string name="identify_fail">未安装API模块，无法进行二维码/身份证识别</string>
    <string name="idcard_xzsbzfm">请选择识别身份证正反面</string>
    <string name="idcard_xzdkqlx">请选择读卡器类型</string>
    <string name="idcard_front">正面</string>
    <string name="idcard_back">反面</string>
    <string name="get_id_back_fail">获取身份证反面信息失败</string>
    <string name="bl_xsdxx">显示的信息</string>
    <string name="bl_hqqx">获取USB权限</string>
    <string name="tacard_qr">确认</string>
    <string name="tacard_qrxr">确认写入</string>
    <string name="tacard_xrsj">写入数据</string>
    <string name="bl_hqsfzxx">获取身份证信息</string>
    <string name="idcard_not_find_usb_demo">找不到apk</string>
    <string name="idcard_sam">读卡器SAM编号</string>
    <string name="idcard_hqdkqsam">获取读卡器Sam编号中</string>
    <string name="idcard_hqsamsb">获取SAM编号失败</string>
    <string name="idcard_cn_name">中文姓名：</string>
    <string name="idcard_country">国籍或所在地区代码：</string>
    <string name="idcard_version">证件版本号：</string>
    <string name="idcard_dqzwy">打开指纹仪</string>
    <string name="idcard_gbzwy">关闭指纹仪</string>
    <string name="idcard_zwxx">指纹信息：</string>
    <string name="idcard_ysmz">右手拇指</string>
    <string name="idcard_yssz">右手食指</string>
    <string name="idcard_yszz">右手中指</string>
    <string name="idcard_yshz">右手环指</string>
    <string name="idcard_ysxz">右手小指</string>
    <string name="idcard_zsmz">左手拇指</string>
    <string name="idcard_zssz">左手食指</string>
    <string name="idcard_zszz">左手中指</string>
    <string name="idcard_zshz">左手环指</string>
    <string name="idcard_zsxz">左手小指</string>
    <string name="idcard_ysbqdzw">右手不确定指位</string>
    <string name="idcard_zsbqdzw">左手不确定指位</string>
    <string name="idcard_qtbqdzw">其他不确定指位</string>
    <string name="idcard_zwwz">指位未知</string>
    <string name="idcard_zccg">注册成功</string>
    <string name="idcard_zcsb">注册失败</string>
    <string name="idcard_wzc">未注册</string>
    <string name="idcard_zcztwz">注册状态未知</string>
    <string name="idcard_zwzl">指纹质量=</string>
    <string name="idcard_wdqhbhzw">(指纹未读取或不含指纹)</string> 
    <string name="idcard_qfk">请放卡</string>
    <string name="idcard_typeA">type A卡读写系统</string>
    <string name="idcard_qhqqx">请获取权限</string>
    <string name="idcard_djs">倒计时</string>
    <string name="idcard_cscs">测试次数</string>
    <string name="idcard_sbcs">失败次数</string>
    <string name="idcard_cgcs">成功次数</string>
    <string name="idcard_read_once">读卡</string>
    <string name="idcard_start_read">开始循环读卡</string>
    <string name="idcard_stop_read">停止循环读卡</string>
    
    <string name="fprint_wzwy">未找到指纹仪设备</string>
    <string name="fprint_qyzzw">请验证指纹</string>
    <string name="fprint_zwydkz">指纹仪打开中</string>
    <string name="fprint_ppcg">指纹仪认证成功</string>
    <string name="fprint_ppsb">指纹仪认证失败</string>
    <string name="fprint_ppfs">匹配分数：</string>
    
    <string name="bt_scan_item_name">名称</string>
    <string name="bt_scan_item_mac">Mac地址</string>
    <string name="bt_scan_item_rssi">强度</string>
    
    <string name="mode_sim">sim卡</string>
    <string name="idcard_sd">上电</string>
    <string name="idcard_jriccid">进入EF-ICCID</string>
    <string name="idcard_hqiccid">获取ICCID</string>
    <string name="idcard_xd">下电</string>
    <string name="idcard_qcsj">清空数据</string>
    <string name="idcard_hqusbqx">获取usb权限</string>
    <string name="bl_hqqxcg">获取权限成功，请选择功能</string>
    <string name="bl_atr">ATR:</string>
    <string name="bl_simysd">sim卡已上电，请继续选择功能</string>
    <string name="bl_wck">卡槽未插卡</string>
    <string name="bl_sdsb">上电失败</string>
    <string name="bl_iccidresp">进入EF-ICCID应答:</string>
    <string name="bl_jrcg">进入EF-ICCID成功，可读取ICCID</string>
    <string name="bl_jrsb">进入EF-ICCID失败</string>
    <string name="bl_iccid">ICCID:</string>
    <string name="bl_iccidsb">获取ICCID失败</string>
    <string name="bl_iccidcg">获取ICCID成功</string>
    <string name="bl_simxdcg">sim卡下电成功</string>
    <string name="bl_simxdsb">sim卡下电失败</string>
</resources>
